crates/zizmor/tests/integration/snapshots/integration__snapshot__ref_confusion-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"ref-confusion/issue-518-repro.yml\")).offline(false).run()?"
---
error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:13:9
   |
13 |         uses: arduino/setup-task@v2
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

2 findings (1 suppressed): 0 informational, 0 low, 0 medium, 1 high
