crates/zizmor/tests/integration/snapshots/integration__snapshot__self_hosted-6.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 134
expression: "zizmor().input(input_under_test(\"self-hosted/self-hosted-matrix-inclusion.yml\")).args([\"--persona=auditor\"]).run()?"
---
warning[self-hosted-runner]: runs on a self-hosted runner
  --> @@INPUT@@:15:5
   |
15 |       runs-on: ${{ matrix.os }}
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^ expression may expand into a self-hosted runner
...
18 | /     strategy:
19 | |       matrix:
20 | |         os: [macOS-latest, ubuntu-latest]
21 | |         include:
22 | |           - os: self-hosted
   | |___________________________- matrix declares self-hosted runner
   |
   = note: audit confidence → High

1 finding: 0 informational, 0 low, 1 medium, 0 high
