crates/zizmor/tests/integration/snapshots/integration__snapshot__self_hosted.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"self-hosted.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
note[self-hosted-runner]: runs on a self-hosted runner
  --> @@INPUT@@:13:5
   |
13 |     runs-on: [self-hosted, my-ubuntu-box]
   |     ------------------------------------- note: self-hosted runner used here
   |
   = note: audit confidence → High

1 finding: 1 unknown, 0 informational, 0 low, 0 medium, 0 high
