crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-11.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/codeql-sinks.yml\")).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:17:11
   |
17 |           cmd: ${{ github.event.pull_request.title }}
   |           ^^^      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |           |
   |           this code block
   |
   = note: audit confidence → High

2 findings (1 suppressed): 0 unknown, 0 informational, 0 low, 0 medium, 1 high
